--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "url": "https://github.com/rohanphanse/art-gallery/issues"
   },
   "homepage": "https://github.com/rohanphanse/art-gallery#readme",
-  "dependencies": {}
+  "dependencies": {
+    "nanoid": "^3.3.4",
+    "near-sdk-as": "^3.2.3"
+  }
 }
