--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "asbuild": "^0.2.0",
     "assemblyscript": "^0.20.6",
+    "nanoid": "^3.3.4",
     "near-cli": "^3.3.1",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
     "near-sdk-as": "^3.2.3"
-  }
+  },
+  "type": "module"
 }
