--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
   "name": "art-gallery",
-  "version": "1.0.0",
-  "description": "Decentralized art gallery built on NEAR blockchain.",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rohanphanse/art-gallery.git"
-  },
-  "keywords": [],
-  "author": "Rohan Phanse",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rohanphanse/art-gallery/issues"
-  },
-  "homepage": "https://github.com/rohanphanse/art-gallery#readme",
   "dependencies": {
-    "nanoid": "^3.3.4",
-    "near-sdk-as": "^3.2.3"
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0"
+  },
+  "devDependencies": {
+    "eslint": "8.16.0",
+    "eslint-config-next": "12.1.6"
   }
 }
